# job_parser

./: README.md  main.py  pyproject.toml
src/: abstract_class.py  hh_api.py  platforms_request_api.py  sj_api.py  superjob_vacancies.json  superjob_vacancies.py  user_interaction.py  vacancies.py  vacancies_options.py  vacancy.py
utils/: data_collector.py  data_verification.py  print_info.py  utils.py
